<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="3"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:orientation="horizontal">


    <TextView
        android:layout_margin="15dp"
        android:id="@+id/tv_picture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:drawableTop="@drawable/ic_picture"
        android:text="@string/picture"/>

    <TextView
        android:layout_margin="15dp"
        android:id="@+id/tv_camera"
        android:layout_width="0dp"
        android:layout_weight="1.0"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:drawablePadding="10dp"
        android:drawableTop="@drawable/ic_camera"
        android:text="@string/camera"/>

    <TextView
        android:layout_margin="15dp"
        android:id="@+id/tv_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:drawableTop="@drawable/ic_location"
        android:text="@string/location"/>


</LinearLayout>