<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <Button
            android:id="@+id/btm_camera_pop_camera"
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/friend_item_1"
            android:text="@string/camera_pop_camera"
            android:textSize="22sp"/>
        
        <Button
            android:id="@+id/btm_camera_pop_album"
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/friend_item_1"
            android:text="@string/camera_pop_album"
            android:textSize="22sp"/>
        <Button
            android:id="@+id/btm_camera_pop_cancel"
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/friend_item_1"
            android:text="@string/canera_pop_cancel"
            android:textSize="22sp"/>

    </LinearLayout>

</RelativeLayout>